# smenka_back

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  ROADMAP.md
docs/decisions/: 001-owner-not-member.md
docs/superpowers/plans/: 2026-04-04-phase1-authentication.md  2026-04-04-phase2-personal-shifts.md
src/: alembic.ini
src/app/: main.py
src/app/api/: deps.py
src/app/api/v1/: auth.py  organizations.py  router.py  shifts.py  users.py  work_locations.py
src/app/core/: celery_app.py  config.py  database.py  logging.py  security.py
src/app/models/: __init__.py  organization.py  organization_settings.py  shift.py  user.py  work_location.py
src/app/schemas/: auth.py  base.py  organization.py  organization_settings.py  organization_stats.py  shift.py  user.py  work_location.py
src/app/services/: auth.py  organization.py  organization_settings.py  shift.py  work_location.py
src/app/tasks/: __init__.py  cleanup.py  shifts.py
src/app/utils/: geo.py
src/migrations/: env.py
src/migrations/versions/: 20260404_6fbb64b37efd_add_users_refresh_tokens_verification_.py  20260404_81412ba1db6a_add_shifts_and_pauses_tables.py  20260404_abfb0859d813_add_organizations_members_and_work_.py  20260404_fd49e1a252de_phase4_org_settings_and_shift_org_id.py  20260407_add_user_role_column.py
tests/: conftest.py  test_auth.py  test_geo.py  test_org_shifts.py  test_organization_settings.py  test_organizations.py  test_shifts.py  test_tasks.py  test_users.py  test_work_locations.py
